# gwas-catalogue-explorer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/plans/: 2026-03-16-t2d-drug-target-design.md  2026-03-16-t2d-drug-target-plan.md  2026-03-17-eqtl-two-sample-mr.md
notebooks/: 01_extract_gwas_hits.ipynb  02_map_variants_to_genes.ipynb  03_druggability_lookup.ipynb  04_mendelian_randomization.ipynb  05_prioritize_targets.ipynb
src/gwas_explorer/: __init__.py  config.py  download.py  druggability.py  filter.py  gene_mapping.py  http_utils.py  mr_analysis.py  prioritize.py
tests/: conftest.py  test_download.py  test_druggability.py  test_filter.py  test_gene_mapping.py  test_http_utils.py  test_mr_analysis.py  test_prioritize.py
